samples/_failures_safe/1761631935_992ea2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a078166d.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_a078166d.c:148:5: error: expected expression at end of input
  148 |     heap->size =
      |     ^~~~
./samples/SAFE/__tmp_a078166d.c:148:5: error: expected declaration or statement at end of input
